--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -21,7 +21,7 @@
                             <a href="{{ path('homepage') }}" class="text-nowrap logo-img text-center d-block py-3 w-100">
                                 <img src="{{ asset('asset/edu3.png') }}" width="180" alt="Logo">
                             </a>
-                            <p class="text-center">Recenser votre matériel éducatif</p>
+                            {# <p class="text-center">Recenser votre matériel éducatif</p> #}
 
                             <form method="post" class="login-form">
                                 {% if error %}
@@ -58,10 +58,10 @@
 
                                 <button class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2" type="submit">Se Connecter</button>
 
-                                <div class="d-flex align-items-center justify-content-center">
+                                {# <div class="d-flex align-items-center justify-content-center">
                                     <p class="fs-4 mb-0 fw-bold">Vous êtes Nouveau?</p>
                                     <a class="text-primary fw-bold ms-2" href="{{ path('app_register') }}">Créer un compte</a>
-                                </div>
+                                </div> #}
                             </form>
 
                         </div>
