changement url publi display -> public badges

--- a/templates/badge/public_badges.html.twig
+++ b/templates/badge/public_badges.html.twig
@@ -151,7 +151,7 @@
     <div class="header">
         <img src="../asset/logobeaup.png" alt="Logo">
         <div>
-            <h1>Liste des badges validés</h1>
+            <h1>Liste des Badges</h1>
             <p>Merci de vous présenter à l'accueil.</p>
         </div>
     </div>
