--- a/templates/badge/badge.html.twig
+++ b/templates/badge/badge.html.twig
@@ -36,6 +36,7 @@
                                         <option value="Premiere">Première</option>
                                         <option value="Terminale">Terminal</option>
                                         <option value="BTS">BTS</option>
+                                        <option value="Bachelor">Bachelor</option>
                                     </select>
                                 </div>
                                 <div class="col-md-2">
@@ -113,6 +114,7 @@
                             <option value="Premiere">Première</option>
                             <option value="Terminale">Terminal</option>
                             <option value="BTS">BTS</option>
+                            <option value="Bachelor">Bachelor</option>
                         </select>
                     </div>
                     <div class="mb-3">
