installation vue.js

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,6 +53,7 @@
         });
     </script>
     {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
     {% endblock %}
 </body>
 </html>
