--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -10,69 +10,9 @@
 {% endblock %}
 
 {% block body %}
-<div id="app"></div>
+<div id="login"></div>
 <!-- Body Wrapper -->
-<div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
-    data-sidebar-position="fixed" data-header-position="fixed">
-    <div class="position-relative overflow-hidden radial-gradient min-vh-100 d-flex align-items-center justify-content-center">
-        <div class="d-flex align-items-center justify-content-center w-100">
-            <div class="row justify-content-center w-100">
-                <div class="col-md-8 col-lg-6 col-xxl-3">
-                    <div class="card mb-0">
-                        <div class="card-body">
-                            <a href="{{ path('homepage') }}" class="text-nowrap logo-img text-center d-block py-3 w-100">
-                                <img src="{{ asset('asset/edu3.png') }}" width="180" alt="Logo">
-                            </a>
-                            {# <p class="text-center">Recenser votre matériel éducatif</p> #}
 
-                            <form method="post" class="login-form">
-                                {% if error %}
-                                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                                {% endif %}
-
-                                {% if app.user %}
-                                    <div class="mb-3">
-                                        You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-                                    </div>
-                                {% endif %}
-
-                                <div class="mb-3">
-                                    <label for="username" class="form-label">Nom d'utilisateur</label>
-                                    <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
-                                </div>
-
-                                <div class="mb-4">
-                                    <label for="password" class="form-label">Mot de Passe</label>
-                                    <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
-                                </div>
-
-                                {# <div class="d-flex align-items-center justify-content-between mb-4">
-                                    <div class="form-check">
-                                        <input class="form-check-input primary" type="checkbox" value="" id="flexCheckChecked" checked>
-                                        <label class="form-check-label text-dark" for="flexCheckChecked">
-                                            Se Souvenir de moi
-                                        </label>
-                                    </div>
-                                     <a class="text-primary fw-bold" href="{{ path('forgot_password') }}">Forgot Password?</a>
-                                </div> #}
-
-                                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-                                <button class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2" type="submit">Se Connecter</button>
-
-                                {# <div class="d-flex align-items-center justify-content-center">
-                                    <p class="fs-4 mb-0 fw-bold">Vous êtes Nouveau?</p>
-                                    <a class="text-primary fw-bold ms-2" href="{{ path('app_register') }}">Créer un compte</a>
-                                </div> #}
-                            </form>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 {% endblock %}
 
 {% block javascripts %}
