--- a/templates/integration/index.html.twig
+++ b/templates/integration/index.html.twig
@@ -15,7 +15,7 @@
 {% block body %}
 <div id="sidebar"></div>
 <div id="header"></div>
-<div id="dashboard"></div>
+<div id="inventory"></div>
 <!-- Body Wrapper -->
 
 {% endblock %}
