premiere integration vue imprimante

--- a/templates/imprimante/imprimante.html.twig
+++ b/templates/imprimante/imprimante.html.twig
@@ -15,7 +15,7 @@
 {% block body %}
 <div id="sidebar"></div>
 <div id="header"></div>
-<div id="dashboard"></div>
+<div id="imprimante"></div>
 <!-- Body Wrapper -->
 
 {% endblock %}
