--- a/templates/badge/public_badges.html.twig
+++ b/templates/badge/public_badges.html.twig
@@ -105,6 +105,10 @@
             }
         }
 
+        .sf-toolbar {
+            display: none !important;
+        }   
+
         /* Tableau agrandi */
         .badge-table {
             margin: 20px auto;
