--- a/templates/badge/badge.html.twig
+++ b/templates/badge/badge.html.twig
@@ -16,6 +16,7 @@
 <div id="sidebar"></div>
 <div id="header"></div>
 <div id="badge"></div>
+<div id="footer"></div>
 <!-- Body Wrapper -->
 
 {% endblock %}
