--- a/templates/inventory/inventory.html.twig
+++ b/templates/inventory/inventory.html.twig
@@ -16,6 +16,7 @@
 <div id="sidebar"></div>
 <div id="header"></div>
 <div id="inventory"></div>
+<div id="footer"></div>
 <!-- Body Wrapper -->
 
 {% endblock %}
