--- a/templates/printer_stat/index.html.twig
+++ b/templates/printer_stat/index.html.twig
@@ -16,6 +16,7 @@
 <div id="sidebar"></div>
 <div id="header"></div>
 <div id="vue-table"></div>
+<div id="footer"></div>
 <!-- Body Wrapper -->
 
 {% endblock %}
